# ng-monitor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  doxygen.conf  package.json
docopt/: CMakeLists.txt
docopt/src/: docopt.cpp
extra/: CMakeLists.txt
extra/include/: Definitions.hpp  Directory.hpp  ansi_colors.hpp  ansi_input.hpp  crc16_support.hpp  crc32_support.hpp  crc64_support.hpp  octal_support.hpp  string_support.hpp
extra/src/: Directory.cpp  ansi_colors.cpp  crc16.cpp  crc32.cpp  crc64.cpp  string_support.cpp
html/: md_CHANGELOG.html  md_README.html  pages.html
html/search/: all_0.js  all_1.js  pages_0.js  pages_1.js  searchdata.js
include/: HelloWorld.hpp
include/Imploder/: ExploderInterface.hpp  ImploderInterface.hpp  ZipEntryInterface.hpp
include/Imploder/Linux/: Exploder.hpp  FreeFormJS.hpp  Imploder.hpp  ZipEntry.hpp
include/NgMonitor/: NgMonitor.hpp
latex/: md_CHANGELOG.tex  md_README.tex  refman.tex
src/: FreeFormJS.cpp  HelloWorld.cpp  explode.cpp  implode.cpp  main.cpp
src/Imploder/Linux/: Exploder.cpp  FreeFormJS.cpp  Imploder.cpp  ZipEntry.cpp
src/NgMonitor/: NgMonitor.cpp
test/: test_Directory.cpp  test_Exploder.cpp  test_FakeIt.cpp  test_FreeFormJS.cpp  test_HelloWorld.cpp  test_Imploder.cpp  test_NgMonitor.cpp
